z-index-tooltip-fix

--- a/styles/video.css
+++ b/styles/video.css
@@ -111,6 +111,7 @@
     pointer-events: none;
     bottom: -82px;
     left: 5px;
+    z-index: 1;
 }
 .profile-pic-container:hover .channel-picture-tooltip{
     display: grid;
